5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4470/executions/1592_2043.log
== TEST (2019-04-07 16:45:42) 
-- CODE:
nota_a = float(input())
nota_b = float(input())
nota_c = float(input())
nota_d = float(input())
mp = (nota_a+nota_b**2+nota_c**3+nota_d**4)/10
print(round(mp, 2))
-- OUTPUT:
698.42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 16:46:13) 
-- CODE:
nota_a = float(input())
nota_b = float(input())
nota_c = float(input())
nota_d = float(input())
mp = (nota_a+nota_b**2+nota_c**3+nota_d**4)/10
print(round(mp, 2))
-- EXECUTION TIME:
0.201643
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
698.42
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
280.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
708.77
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:46:16) 
-- CODE:
nota_a = float(input())
nota_b = float(input())
nota_c = float(input())
nota_d = float(input())
mp = (nota_a+nota_b**2+nota_c**3+nota_d**4)/10
print(round(mp, 2))
-- OUTPUT:
698.42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:47:15) 
-- CODE:
nota_a = float(input())
nota_b = float(input())
nota_c = float(input())
nota_d = float(input())
mp = (nota_a+nota_b**2+nota_c**3+nota_d**4)/10
print(round(mp, 2))
-- OUTPUT:
698.42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:48:12) 
-- CODE:
nota_a = float(input())
nota_b = float(input())
nota_c = float(input())
nota_d = float(input())
mp = (nota_a+nota_b+nota_c+nota_d)/10
print(round(mp, 2))
-- OUTPUT:
3.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:48:26) 
-- CODE:
nota_a = float(input())
nota_b = float(input())
nota_c = float(input())
nota_d = float(input())
mp = (nota_a+nota_b+nota_c+nota_d)/10
print(round(mp, 2))
-- OUTPUT:
3.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:49:06) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
d = float(input())
mp = (a+b+c+d)/10
print(round(mp, 2))
-- OUTPUT:
3.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:51:11) 
-- CODE:
a = int(input())
b = float(input())
c = float(input())
d = float(input())
mp = (a+b+c+d)/10
print(round(mp, 2))
-- OUTPUT:
3.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:51:21) 
-- CODE:
a = float(input())
b = float(input())
c = float(input())
d = float(input())
mp = (a+b+c+d)/10
print(round(mp, 2))
-- OUTPUT:
3.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:52:41) 
-- CODE:
p = 1
p = 2
p = 3
p = 4
a = float(input())
b = float(input())
c = float(input())
d = float(input())
mp = (pa+pb+pc+pd)/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mp = (pa+pb+pc+pd)/10
NameError: name 'pa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:53:34) 
-- CODE:
pa = 1
pb = 2
pc = 3
pd = 4
a = float(input())
b = float(input())
c = float(input())
d = float(input())
mp = (a*pa+b*pb+c*pc+d*pd)/10
print(round(mp, 2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:53:48) 
-- CODE:
pa = 1
pb = 2
pc = 3
pd = 4
a = input()
b = float(input())
c = float(input())
d = float(input())
mp = (a*pa+b*pb+c*pc+d*pd)/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mp = (a*pa+b*pb+c*pc+d*pd)/10
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:53:48) 
-- CODE:
pa = 1
pb = 2
pc = 3
pd = 4
a = input()
b = float(input())
c = float(input())
d = float(input())
mp = (a*pa+b*pb+c*pc+d*pd)/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mp = (a*pa+b*pb+c*pc+d*pd)/10
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:54:09) 
-- CODE:
pa = 1
pb = 2
pc = 3
pd = 4
a = input()
b = input()
c = input()
d = input()
mp = (a*pa+b*pb+c*pc+d*pd)/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mp = (a*pa+b*pb+c*pc+d*pd)/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:54:36) 
-- CODE:
pa = 1
pb = 2
pc = 3
pd = 4
a = input()
b = input()
c = input()
d = input()
mp = (a*pa+b*pb+c*pc+d*pd)/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mp = (a*pa+b*pb+c*pc+d*pd)/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:56:30) 
-- CODE:
pa = 1
pb = 2
pc = 3
pd = 4
a = input("peso:")
b = input("peso:")
c = input("peso:")
d = input("peso:")
mp = (a*pa+b*pb+c*pc+d*pd)/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mp = (a*pa+b*pb+c*pc+d*pd)/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:56:53) 
-- CODE:
pa = 1
pb = 2
pc = 3
pd = 4
a = input("peso:")
b = input("peso:")
c = input("peso:")
d = input("peso:")
mp = (a+b+c+d)/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mp = (a+b+c+d)/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:57:13) 
-- CODE:
pa = 1
pb = 2
pc = 3
pd = 4
a = input("peso:")
b = input("peso:")
c = input("peso:")
d = input("peso:")
mp = (a+b**2+c**2+d**2)/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mp = (a+b**2+c**2+d**2)/10
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:57:20) 
-- CODE:
pa = 1
pb = 2
pc = 3
pd = 4
a = input("peso:")
b = input("peso:")
c = input("peso:")
d = input("peso:")
mp = (a+b**2+c**2+d**2)/100
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mp = (a+b**2+c**2+d**2)/100
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:57:31) 
-- CODE:
pa = 1
pb = 2
pc = 3
pd = 4
a = input("peso:")
b = input("peso:")
c = input("peso:")
d = input("peso:")
mp = (a+b**2+c**3+d**4)/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mp = (a+b**2+c**3+d**4)/10
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:58:06) 
-- CODE:

a = input()
b = input()
c = input()
d = input()
mp = (a+b**2+c**3+d**4)/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mp = (a+b**2+c**3+d**4)/10
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:58:14) 
-- CODE:

a = input()
b = input()
c = input()
d = input()
mp = (a+b**2+c**3+d**4)/100
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mp = (a+b**2+c**3+d**4)/100
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 16:58:57) 
-- CODE:

a = input()
b = input()
c = input()
d = input()
mp = (a+b**2+c**3+d**4)/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mp = (a+b**2+c**3+d**4)/10
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:01:03) 
-- CODE:
pA = 1
pB = 2
pC = 3
pD = 4
a = input()
b = input()
c = input()
d = input()
mp = ((a*pA)+(b*pB)+(c*pB)+(d*pB))/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mp = ((a*pA)+(b*pB)+(c*pB)+(d*pB))/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:01:17) 
-- CODE:
pA = 1
pB = 2
pC = 3
pD = 4
a = input()
b = input()
c = input()
d = input()
mp = (a*pA)+(b*pB)+(c*pB)+(d*pB)/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mp = (a*pA)+(b*pB)+(c*pB)+(d*pB)/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:01:47) 
-- CODE:
pA = 1
pB = 2
pC = 3
pD = 4
a = input()
b = input()
c = input()
d = input()
mp = ((a*pA)+(b*pB**2)+(c*pB**3)+(d*pB**4))/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mp = ((a*pA)+(b*pB**2)+(c*pB**3)+(d*pB**4))/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:02:57) 
-- CODE:
#peso das merdas das notas
pA = 1
pB = 2
pC = 3
pD = 4
#notas p serem lidas
a = input()
b = input()
c = input()
d = input()
mp = ((a*pA)+(b*pB)+(c*pB)+(d*pB))/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    mp = ((a*pA)+(b*pB)+(c*pB)+(d*pB))/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:03:45) 
-- CODE:
#peso das merdas das notas
pA = 1
pB = 2
pC = 3
pD = 4
#notas p serem lidas
a = input()
b = input()
c = input()
d = input()
mp = ((a*pA)+(b*pB)+(c*pB)+(d*pB))/100
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    mp = ((a*pA)+(b*pB)+(c*pB)+(d*pB))/100
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:04:14) 
-- CODE:
#peso das merdas das notas
pA = 1
pB = 2
pC = 3
pD = 4
#notas p serem lidas
a = input()
b = input()
c = input()
d = input()
mp = ((a*pA)+(b*pB)+(c*pB)+(d*pB))//100
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    mp = ((a*pA)+(b*pB)+(c*pB)+(d*pB))//100
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:04:35) 
-- CODE:
#peso das merdas das notas
pA = 1
pB = 2
pC = 3
pD = 4
#notas p serem lidas
a = float(input())
b = input()
c = input()
d = input()
mp = ((a*pA)+(b*pB)+(c*pB)+(d*pB))//100
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    mp = ((a*pA)+(b*pB)+(c*pB)+(d*pB))//100
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:04:39) 
-- CODE:
#peso das merdas das notas
pA = 1
pB = 2
pC = 3
pD = 4
#notas p serem lidas
a = float(input())
b = input()
c = input()
d = input()
mp = ((a*pA)+(b*pB)+(c*pB)+(d*pB))//100
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    mp = ((a*pA)+(b*pB)+(c*pB)+(d*pB))//100
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:05:12) 
-- CODE:
#peso das merdas das notas
pA = 1
pB = 2
pC = 3
pD = 4
#notas p serem lidas
a = float(input())
b = float(input())
c = float(input())
d = float(input())
mp = ((a*pA)+(b*pB)+(c*pB)+(d*pB))//100
print(round(mp, 2))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:05:19) 
-- CODE:
#peso das merdas das notas
pA = 1
pB = 2
pC = 3
pD = 4
#notas p serem lidas
a = float(input())
b = float(input())
c = float(input())
d = float(input())
mp = ((a*pA)+(b*pB)+(c*pB)+(d*pB))//100
print(round(mp, 2))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:05:31) 
-- CODE:
#peso das merdas das notas
pA = 1
pB = 2
pC = 3
pD = 4
#notas p serem lidas
a = float(input())
b = float(input())
c = float(input())
d = float(input())
mp = ((a*pA)+(b*pB)+(c*pB)+(d*pB))//100
print(round(mp, 2))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 17:05:33) 
-- CODE:
#peso das merdas das notas
pA = 1
pB = 2
pC = 3
pD = 4
#notas p serem lidas
a = float(input())
b = float(input())
c = float(input())
d = float(input())
mp = ((a*pA)+(b*pB)+(c*pB)+(d*pB))//100
print(round(mp, 2))
-- EXECUTION TIME:
0.198111
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
0.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
0.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:05:36) 
-- CODE:
#peso das merdas das notas
pA = 1
pB = 2
pC = 3
pD = 4
#notas p serem lidas
a = float(input())
b = float(input())
c = float(input())
d = float(input())
mp = ((a*pA)+(b*pB)+(c*pB)+(d*pB))//100
print(round(mp, 2))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:05:56) 
-- CODE:
#peso das merdas das notas
pA = 1
pB = 2
pC = 3
pD = 4
#notas p serem lidas
a = float(input())
b = float(input())
c = float(input())
d = float(input())
mp = ((a*pA)+(b*pB)+(c*pB)+(d*pB))/100
print(round(mp, 2))
-- OUTPUT:
0.57
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:06:05) 
-- CODE:
#peso das merdas das notas
pA = 1
pB = 2
pC = 3
pD = 4
#notas p serem lidas
a = float(input())
b = float(input())
c = float(input())
d = float(input())
mp = ((a*pA)+(b*pB)+(c*pB)+(d*pB))/10
print(round(mp, 2))
-- OUTPUT:
5.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 17:06:15) 
-- CODE:
#peso das merdas das notas
pA = 1
pB = 2
pC = 3
pD = 4
#notas p serem lidas
a = float(input())
b = float(input())
c = float(input())
d = float(input())
mp = ((a*pA)+(b*pB)+(c*pB)+(d*pB))/10
print(round(mp, 2))
-- EXECUTION TIME:
0.184944
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
5.7
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
4.9
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
5.34
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:07:06) 
-- CODE:
#peso das merdas das notas
pA = 1
pB = 2
pC = 3
pD = 4
#notas p serem lidas
a = float(input())
b = float(input())
c = float(input())
d = float(input())
mp = ((a*pA)+(b*pB)**2+(c*pB)**3+(d*pB)**4)/10
print(round(mp, 2))
-- OUTPUT:
10801.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:07:18) 
-- CODE:
#peso das merdas das notas
pA = 1
pB = 2
pC = 3
pD = 4
#notas p serem lidas
a = float(input())
b = float(input())
c = float(input())
d = float(input())
mp = ((a*pA)+(b*pB)**2+(c*pB)**3+(d*pB)**4)/10
print(round(mp, 2))
-- OUTPUT:
10801.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:07:20) 
-- CODE:
#peso das merdas das notas
pA = 1
pB = 2
pC = 3
pD = 4
#notas p serem lidas
a = float(input())
b = float(input())
c = float(input())
d = float(input())
mp = ((a*pA)+(b*pB)**2+(c*pB)**3+(d*pB)**4)/10
print(round(mp, 2))
-- OUTPUT:
10801.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:23:32) 
-- CODE:
#notas p serem lidas
a = float(input())
b = float(input())
c = float(input())
d = float(input())

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*pA)+(b*pB)+(c*pB)+(d*pB))/10
print(round(mp, 2))
-- OUTPUT:
5.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:23:38) 
-- CODE:
#notas p serem lidas
a = float(input())
b = float(input())
c = float(input())
d = float(input())

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*pA)+(b*pB)+(c*pB)+(d*pB))/10
print(round(mp, 2))
-- OUTPUT:
5.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:24:05) 
-- CODE:
#notas p serem lidas
a = input()
b = input()
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*pA)+(b*pB)+(c*pB)+(d*pB))/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    mp = ((a*pA)+(b*pB)+(c*pB)+(d*pB))/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:25:26) 
-- CODE:
#notas p serem lidas
a = input()
b = input()
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*pA)+(b*pB)+(c*pB)+(d*pD))/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    mp = ((a*pA)+(b*pB)+(c*pB)+(d*pD))/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:25:37) 
-- CODE:
#notas p serem lidas
a = input()
b = input()
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:25:48) 
-- CODE:
#notas p serem lidas
a = input()
b = input()
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:25:51) 
-- CODE:
#notas p serem lidas
a = input()
b = input()
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:26:16) 
-- CODE:
#notas p serem lidas
a = input()
b = input()
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a**pA)+(b**pB)+(c**pC)+(d**pD))/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    mp = ((a**pA)+(b**pB)+(c**pC)+(d**pD))/10
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:26:22) 
-- CODE:
#notas p serem lidas
a = input()
b = input()
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a**pA)+(b**pB)+(c**pC)+(d**pD))/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    mp = ((a**pA)+(b**pB)+(c**pC)+(d**pD))/10
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:28:03) 
-- CODE:
#notas p serem lidas
a = float(input())
b = float(input())
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a**pA)+(b**pB)+(c**pC)+(d**pD))/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    mp = ((a**pA)+(b**pB)+(c**pC)+(d**pD))/10
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:28:09) 
-- CODE:
#notas p serem lidas
a = float(input())
b = float(input())
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a**pA)+(b**pB)+(c**pC)+(d**pD))/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    mp = ((a**pA)+(b**pB)+(c**pC)+(d**pD))/10
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:28:11) 
-- CODE:
#notas p serem lidas
a = float(input())
b = float(input())
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a**pA)+(b**pB)+(c**pC)+(d**pD))/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    mp = ((a**pA)+(b**pB)+(c**pC)+(d**pD))/10
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:28:34) 
-- CODE:
-*- coding: -*-
#notas p serem lidas
a = float(input())
b = float(input())
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a**pA)+(b**pB)+(c**pC)+(d**pD))/10
print(round(mp, 2))
-- ERROR:
File "XXXX", line 1
    -*- coding: -*-
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:28:36) 
-- CODE:
-*- coding: -*-
#notas p serem lidas
a = float(input())
b = float(input())
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a**pA)+(b**pB)+(c**pC)+(d**pD))/10
print(round(mp, 2))
-- ERROR:
File "XXXX", line 1
    -*- coding: -*-
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:28:37) 
-- CODE:
-*- coding: -*-
#notas p serem lidas
a = float(input())
b = float(input())
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a**pA)+(b**pB)+(c**pC)+(d**pD))/10
print(round(mp, 2))
-- ERROR:
File "XXXX", line 1
    -*- coding: -*-
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:28:37) 
-- CODE:
-*- coding: -*-
#notas p serem lidas
a = float(input())
b = float(input())
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a**pA)+(b**pB)+(c**pC)+(d**pD))/10
print(round(mp, 2))
-- ERROR:
File "XXXX", line 1
    -*- coding: -*-
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:28:38) 
-- CODE:
-*- coding: -*-
#notas p serem lidas
a = float(input())
b = float(input())
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a**pA)+(b**pB)+(c**pC)+(d**pD))/10
print(round(mp, 2))
-- ERROR:
File "XXXX", line 1
    -*- coding: -*-
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:28:38) 
-- CODE:
-*- coding: -*-
#notas p serem lidas
a = float(input())
b = float(input())
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a**pA)+(b**pB)+(c**pC)+(d**pD))/10
print(round(mp, 2))
-- ERROR:
File "XXXX", line 1
    -*- coding: -*-
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:28:38) 
-- CODE:
-*- coding: -*-
#notas p serem lidas
a = float(input())
b = float(input())
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a**pA)+(b**pB)+(c**pC)+(d**pD))/10
print(round(mp, 2))
-- ERROR:
File "XXXX", line 1
    -*- coding: -*-
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:28:49) 
-- CODE:
#notas p serem lidas
a = float(input())
b = float(input())
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a**pA)+(b**pB)+(c**pC)+(d**pD))/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    mp = ((a**pA)+(b**pB)+(c**pC)+(d**pD))/10
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:28:50) 
-- CODE:
#notas p serem lidas
a = float(input())
b = float(input())
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a**pA)+(b**pB)+(c**pC)+(d**pD))/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    mp = ((a**pA)+(b**pB)+(c**pC)+(d**pD))/10
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:30:35) 
-- CODE:
#notas p serem lidas
a = input()
b = input()
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*1)+(b*2)+(c*3)+(d*4))/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    mp = ((a*1)+(b*2)+(c*3)+(d*4))/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:30:58) 
-- CODE:
#notas p serem lidas
a = input()
b = input()
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = (a+(b*2)+(c*3)+(d*4))/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    mp = (a+(b*2)+(c*3)+(d*4))/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:31:00) 
-- CODE:
#notas p serem lidas
a = input()
b = input()
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = (a+(b*2)+(c*3)+(d*4))/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    mp = (a+(b*2)+(c*3)+(d*4))/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:32:56) 
-- CODE:
#notas p serem lidas
a = input()
b = input()
c = input()
d = input()

#peso das notas
p_A = 1
p_B = 2
p_C = 3
p_D = 4

mp = ((a*p_A)+(b*p_B)+(c*p_C)+(d*p_D))/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    mp = ((a*p_A)+(b*p_B)+(c*p_C)+(d*p_D))/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:33:37) 
-- CODE:
#notas p serem lidas
a = input()
b = input()
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:34:31) 
-- CODE:
#notas p serem lidas
a = int(input())
b = input()
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:34:40) 
-- CODE:
#notas p serem lidas
a = input()
b = input()
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:34:41) 
-- CODE:
#notas p serem lidas
a = input()
b = input()
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:42:45) 
-- CODE:
#notas p serem lidas
a = float(input())
b = float(input())
c = float(input())
d = float(input())

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
print(round(mp, 2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:47:35) 
-- CODE:
#notas p serem lidas
a = float(input())
b = float(input())
c = float(input())
d = float(input())

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
print(round(mp, 2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:50:51) 
-- CODE:
#notas p serem lidas
a = float(input())
b = float(input())
c = float(input())
d = float(input())



mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
NameError: name 'pA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:53:34) 
-- CODE:
#notas p serem lidas
a = float(input())
b = float(input())
c = float(input())
d = float(input())

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
print(round(mp, 2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:53:35) 
-- CODE:
#notas p serem lidas
a = float(input())
b = float(input())
c = float(input())
d = float(input())

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
print(round(mp, 2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:53:36) 
-- CODE:
#notas p serem lidas
a = float(input())
b = float(input())
c = float(input())
d = float(input())

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
print(round(mp, 2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:53:37) 
-- CODE:
#notas p serem lidas
a = float(input())
b = float(input())
c = float(input())
d = float(input())

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
print(round(mp, 2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:53:38) 
-- CODE:
#notas p serem lidas
a = float(input())
b = float(input())
c = float(input())
d = float(input())

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
print(round(mp, 2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:55:42) 
-- CODE:
#notas p serem lidas
a = float(input())
b = float(input())
c = float(input())
d = float(input())

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
print(round(mp, 2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:56:19) 
-- CODE:
#notas p serem lidas
a = int(input())
b = float(input())
c = float(input())
d = float(input())

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
print(round(mp, 2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:57:48) 
-- CODE:
#notas p serem lidas
a = int(input())
b = float(input())
c = float(input())
d = float(input())

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*pA)+(b*pB)**2+(c*pC)**3+(d*pD)**4)/10
print(round(mp, 2))
-- OUTPUT:
168917.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:57:55) 
-- CODE:
#notas p serem lidas
a = float(input())
b = float(input())
c = float(input())
d = float(input())

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*pA)+(b*pB)**2+(c*pC)**3+(d*pD)**4)/10
print(round(mp, 2))
-- OUTPUT:
168917.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:59:25) 
-- CODE:
#notas p serem lidas
a = input()
b = input()
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*pA)+(b*pB)**2+(c*pC)**3+(d*pD)**4)/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    mp = ((a*pA)+(b*pB)**2+(c*pC)**3+(d*pD)**4)/10
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 17:59:56) 
-- CODE:
#notas p serem lidas
a = input()
b = input()
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD)1)/10
print(round(mp, 2))
-- ERROR:
File "XXXX", line 13
    mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD)1)/10
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 18:00:02) 
-- CODE:
#notas p serem lidas
a = input()
b = input()
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD)*1)/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD)*1)/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 20:47:57) 
-- CODE:
#notas p serem lidas
a = float(input())
b = input()
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 20:48:14) 
-- CODE:
#notas p serem lidas
a = float(input())
b = float(input())
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 20:48:35) 
-- CODE:
#notas p serem lidas
a = input()
b = input()
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 20:48:42) 
-- CODE:
#notas p serem lidas
a = input()
b = input()
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD))/10
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 20:49:32) 
-- CODE:
#notas p serem lidas
a = input()
b = input()
c = input()
d = input()

#peso das notas
pA = 1
pB = 2
pC = 3
pD = 4

mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD)/10)
print(round(mp, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    mp = ((a*pA)+(b*pB)+(c*pC)+(d*pD)/10)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
